# server/router/api/v1/connect_services.go
@@ -706,6 +706,14 @@ func (s *ConnectServiceHandler) Transcribe(ctx context.Context, req *connect.Req
 	return connect.NewResponse(resp), nil
 }
 
+func (s *ConnectServiceHandler) Synthesize(ctx context.Context, req *connect.Request[v1pb.SynthesizeRequest]) (*connect.Response[v1pb.SynthesizeResponse], error) {
+	resp, err := s.APIV1Service.Synthesize(ctx, req.Msg)
+	if err != nil {
+		return nil, convertGRPCError(err)
+	}
+	return connect.NewResponse(resp), nil
+}
+
 // IdentityProviderService
 
 func (s *ConnectServiceHandler) ListIdentityProviders(ctx context.Context, req *connect.Request[v1pb.ListIdentityProvidersRequest]) (*connect.Response[v1pb.ListIdentityProvidersResponse], error) {
